[package]
name = "valo-tracker-fetcher"
version = "0.1.1"
edition = "2021"
authors = ["omerakgoz34 <omerakgoz34@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
strip = true
opt-level = 3
incremental = false
codegen-units = 1
lto = true
panic = "abort"

[profile.release.package."*"]
debug = false
strip = true
opt-level = 3
incremental = false
codegen-units = 1

[dependencies]
minreq = { version = "^2.3", features = ["https-native"] }
scraper = "^0.12"