[package]
name = "valo-tracker-fetcher"
version = "0.1.2"
edition = "2021"
authors = ["omerakgoz34 <omerakgoz34@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = false
incremental = false
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true

[profile.release.package."*"]
debug = false
incremental = false
opt-level = 3
codegen-units = 1
strip = true

[dependencies]
minreq = { version = "^2.3", features = ["https-native"] }
scraper = "^0.12"